--- a/lab_1.ipynb
+++ b/lab_1.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "Curso Aprendizaje por Refuerzos, Diplomatura en Ciencia de Datos, Aprendizaje Automático y sus Aplicaciones\n",
     "\n",
-    "FaMAF, 2019"
+    "FaMAF, 2019\n",
+    "\n",
+    "* Exequiel Aguirre (exequiel.aguirre@gmail.com, eaguirre@conae.gov.ar)"
    ]
   },
   {
